fixed word break on dashboard

--- a/app/assets/stylesheets/libraoc_styles.scss
+++ b/app/assets/stylesheets/libraoc_styles.scss
@@ -90,11 +90,15 @@ a.navbar-brand {
   .media-body {
     white-space: normal;
     min-width: 200px;
+    .document-title {
+      word-break: break-word;
+    }
   }
   .date {
     white-space: nowrap;
   }
 }
+
 
 //
 // end of file
